# List

./: README.md
List/: AnimeList.cpp  AnimeList.h  CMakeLists.txt  completedAnime.cpp  completedAnime.h  inputs.cpp  inputs.h  main.cpp  notCompletedAnime.cpp  notCompletedAnime.h  testing.cpp
